--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -3,20 +3,28 @@
   <%= render 'toolbar' %>
 
   <%# The actual report content %>
-  <div class="page-content-new row collapse">
-    <div class="medium-12 columns">
+  <ul class="tabs" data-tab role="tablist">
+    <li class="tab-title active" role="presentational" ><a href="#panel2-1" role="tab" tabindex="0" aria-selected="true" controls="panel2-1">Table</a></li>
+    <% if @report.is_graph && @report.has_data? %>
+      <li class="tab-title" role="presentational" ><a href="#panel2-2" role="tab" tabindex="0"aria-selected="false" controls="panel2-2">Graph</a></li>
+    <% end %>
+  </ul>
+  <div class="page-content-new">
       <div class="report_header_content">
         <div class="report_description"><%= @report.description %></div>
       </div>
-      <% if @report.is_graph && @report.has_data? %>
-        <div class="report_chart_content">
-          <canvas id="report_graph" height="300px" width="1000px"></canvas>
+      <div class="tabs-content">
+        <% if @report.is_graph && @report.has_data? %>
+        <div role="tabpanel" aria-hidden="false" class="content" id="panel2-2">
+            <div class="report_chart_content">
+              <canvas id="report_graph" height="500" width="1000"></canvas>
+            </div>
         </div>
-      <% end %>
-      <div class="report_table_content">
-        <% if @report.has_data? %>
-          <table id="report_table">
-            <thead>
+        <% end %>
+        <div class="report_table_content content active" role="tabpanel" aria-hidden="true" class="content" id="panel2-1">
+          <% if @report.has_data? %>
+            <table id="report_table">
+              <thead>
               <% report_header_rows(@report.data[:disaggregate_value_range]).each do |header_row| %>
                 <tr>
                   <th></th>
@@ -25,8 +33,8 @@
                   <% end %>
                 </tr>
               <% end %>
-            </thead>
-            <tbody>
+              </thead>
+              <tbody>
               <% @report.data[:aggregate_value_range][1..-1].each do |aggregate| %>
                 <tr class="<%= report_row_type(aggregate) %>">
                   <td class="report_sidebar_value"><%= report_sidebar_value(aggregate) %></td>
@@ -36,17 +44,17 @@
                   <% key_padding = []
                      if @report.data[:disaggregate_value_range]
                        key_padding = @report.data[:disaggregate_value_range][0]
-                    end
+                     end
                   %>
                   <td><%= @report.data[:values][aggregate + @report.data[:disaggregate_value_range][0]] %></td>
                 </tr>
               <% end %>
-            </tbody>
-          </table>
-        <% else %>
-          <div><%= t 'report.no_data' %></div>
-        <% end %>
+              </tbody>
+            </table>
+          <% else %>
+            <div><%= t 'report.no_data' %></div>
+          <% end %>
+        </div>
       </div>
-    </div>
   </div>
 </div>
