--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -4,9 +4,9 @@
 
   <%# The actual report content %>
   <ul class="tabs" data-tab role="tablist">
-    <li class="tab-title active" role="presentational" ><a href="#panel2-1" role="tab" tabindex="0" aria-selected="true" controls="panel2-1">Table</a></li>
+    <li class="tab-title active" role="presentational" ><a href="#panel2-1" role="tab" tabindex="0" aria-selected="true" controls="panel2-1"><%= t('reports.tabs.table') %></a></li>
     <% if @report.is_graph && @report.has_data? %>
-      <li class="tab-title" role="presentational" ><a href="#panel2-2" role="tab" tabindex="0"aria-selected="false" controls="panel2-2">Graph</a></li>
+      <li class="tab-title" role="presentational" ><a href="#panel2-2" role="tab" tabindex="0"aria-selected="false" controls="panel2-2"><%= t('reports.tabs.graph') %></a></li>
     <% end %>
   </ul>
   <div class="page-content-new">
