Primero-1146: extended the custom export modal and resized the chosen select options

--- a/app/assets/stylesheets/primero/forms_fields.scss
+++ b/app/assets/stylesheets/primero/forms_fields.scss
@@ -585,7 +585,21 @@ span.postfix_val {
     display: none;
     color: $stroke_green_color;
   }
+
+  .chosen-container .chosen-results {
+    max-height: 150px;
+  }
+
+  fieldset.submit_button {
+    margin-bottom: 0;
+
+    button {
+      margin-bottom: 0;
+    }
+  }
 }
+
+
 
 ////////////////////////////////////////////////
 // User forms
