--- a/app/views/exports/_custom_exports.html.erb
+++ b/app/views/exports/_custom_exports.html.erb
@@ -65,7 +65,7 @@
             <input type="text" id="export-filename">
           </div>
         </div>
-        <fieldset class="no-border">
+        <fieldset class="no-border submit_button">
           <button id="submit_export" class="btn green-button right"><%= t('exports.custom_exports.submit') %></button>
         </fieldset>
       </div>
