--- a/app/views/form_section/_select_box.html.erb
+++ b/app/views/form_section/_select_box.html.erb
@@ -27,6 +27,18 @@
       <%= select_tag name, options_for_select(select_box.select_options(formObject, @lookups, @locations), value), :id => field_id,
           :data => { :field_tags => field_tags} %>
     <% end %>
-    <p class="help"><%= select_box.help_text if select_box.help_text.present? %></p>
+    <% if select_box.guiding_questions.present? %>
+      <%= link_to(t('buttons.guiding_questions'), '', class: 'gq_popovers', tabindex: '0',
+                  data: {
+                      toggle: 'popover',
+                      trigger: 'focus',
+                      title: t('buttons.guiding_questions'),
+                      html: true
+                  }) %>
+      <div class='popover_content' style="display:none;">
+        <%=  select_box.guiding_questions %>
+      </div>
+    <% end %>
+    <% if select_box.help_text.present? %><p class="help"><%= select_box.help_text  %></p><% end %>
   </div>
 </div>
