--- a/app/assets/stylesheets/primero/typography_icons.scss
+++ b/app/assets/stylesheets/primero/typography_icons.scss
@@ -25,6 +25,15 @@ a{
   clear:both;
 }
 
+a#show_change_log {
+  border-bottom: 1px dotted $grey_color;
+  padding-bottom: 2px;
+
+  &:hover {
+    color: #000 !important;
+  }
+}
+
 ////////////////////////////////////////////////
 // Icons
 ////////////////////////////////////////////////
