--- a/app/assets/stylesheets/primero/sidetab.scss
+++ b/app/assets/stylesheets/primero/sidetab.scss
@@ -167,3 +167,12 @@ ul.side-nav, ul.modal-side-nav {
     border-bottom: 1px solid #ebebeb;
   }
 }
+
+a#show_change_log {
+  border-bottom: 1px dotted $grey_color;
+  padding-bottom: 2px;
+
+  &:hover {
+    color: #000 !important;
+  }
+}
