Hiding action checkbox since there are no actions to take. The Delete action shows up only if the report is editable.

--- a/app/views/reports/_summary_row.html.erb
+++ b/app/views/reports/_summary_row.html.erb
@@ -1,13 +1,15 @@
 <tr>
+  <% if false %>
   <td class="select_record">
     <input type="checkbox" class="select_record" value="<%= record.id %>" id="<%= record.name %>">
   </td>
+  <% end %>
   <td id="report_<%= record.id %>" class="id_column">
     <%= link_to record.name, report_path(record), class: 'id_link' %>
   </td>
   <td><%= record.description %></td>
   <td>
-    <% if can?(:destroy, Report) %>
+    <% if can?(:destroy, Report) && record.editable %>
         <%= link_to t("reports.actions.delete"), record, data: {confirm: t("reports.messages.confirmation")}, method: :delete %>
     <% end %>
   </td>
