Small styling change

--- a/app/assets/stylesheets/primero/scopes_filters.scss
+++ b/app/assets/stylesheets/primero/scopes_filters.scss
@@ -43,6 +43,7 @@ div.scope_bar {
     &:hover {
       text-decoration: none;
       border-bottom: none;
+      font-weight: bold;
     }
 
     i {
