giving pdf export ability to select form.  WIP

--- a/app/assets/stylesheets/primero/forms_fields.scss
+++ b/app/assets/stylesheets/primero/forms_fields.scss
@@ -547,7 +547,7 @@ span.postfix_val {
 // Custom Exports
 ////////////////////////////////////////////////
 
-#custom-exports {
+#custom-exports, #pdf-exports {
 
   .chosen-container-single, .chosen-container-multi {
     width: 100% !important;
