--- a/app/views/exports/_button.html.erb
+++ b/app/views/exports/_button.html.erb
@@ -1,19 +1,23 @@
 <% if can?(:export, controller.model_class) %>
-<li>
-  <%= link_to t("buttons.export"), '#', class: 'has_sub' %>
-  <ul style="display:none;">
-    <% Exporters::active_exporters_for_model(controller.model_class).each do |exporter| %>
-      <%# Find out if the exporter should be visible on the current page %>
-      <% module_ids = defined?(instance) ? [instance.module_id] : (@current_modules.present? ? @current_modules.map{|m| m.id} : []) %>
-      <% if exporter_visible_page?(exporter.id, module_ids) && can?("export_#{exporter.id}".to_sym, controller.model_class) %>
-      <li>
-      <%= link_to(t("exports.#{exporter.id}.#{defined?(instance) ? 'one' : 'all'}"),
-                    url_for(:format => exporter.id, :page => "all", :per_page => :all, :id => (defined?(instance) ? instance.id : nil), :params => exporter_params_page(exporter.id, params)),
-                  :class => "password-prompt", 'data-reveal-id' => "password-prompt-dialog") %>
-      </li>
+  <li>
+    <%= link_to t("buttons.export"), '#', class: 'has_sub' %>
+    <ul style="display:none;">
+      <% Exporters::active_exporters_for_model(controller.model_class).each do |exporter| %>
+        <%# Find out if the exporter should be visible on the current page %>
+        <% module_ids = defined?(instance) ? [instance.module_id] : (@current_modules.present? ? @current_modules.map{|m| m.id} : []) %>
+        <% if exporter_visible_page?(exporter.id, module_ids) && can?("export_#{exporter.id}".to_sym, controller.model_class) %>
+          <% if exporter.name == "Exporters::PDFExporter" %>
+            <%= render 'exports/custom_exports_link', export_type: 'pdf' %>
+          <% else %>
+            <li>
+              <%= link_to(t("exports.#{exporter.id}.#{defined?(instance) ? 'one' : 'all'}"),
+                        url_for(:format => exporter.id, :page => "all", :per_page => :all, :id => (defined?(instance) ? instance.id : nil), :params => exporter_params_page(exporter.id, params)),
+                        :class => "password-prompt", 'data-reveal-id' => "password-prompt-dialog") %>
+            </li>
+          <% end %>
+        <% end %>
       <% end %>
-    <% end %>
-  </ul>
-</li>
+    </ul>
+  </li>
 <% end %>
 
