--- a/app/views/record_shared/_actions.html.erb
+++ b/app/views/record_shared/_actions.html.erb
@@ -6,7 +6,9 @@
         <%= render 'imports/button' %>
       <% end %>
       <%= render 'exports/button', locals: { model: model } %>
-      <%= render 'exports/custom_exports', locals: { model: model } %>
+      <% if can?(:export_custom, controller.model_class) && controller.model_class != Incident %>
+        <%= render 'exports/custom_exports_link', model: model, export_type: 'custom' %>
+      <% end%>
       <%
         #TODO - For now, only implementing transfer and referral for Cases
         #TODO - At some point, it will be available for other record types
