--- a/app/views/shared/_side_tab.html.erb
+++ b/app/views/shared/_side_tab.html.erb
@@ -1,4 +1,4 @@
- <div class="side-tab" data-equalizer-watch>
+ <div class="side-tab static_links" data-equalizer-watch>
   <div class="side-nav-container">
     <div class="scrolling_indicator up"><%= t('messages.scroll_up') %></div>
     <ul class="side-nav">
