--- a/app/views/form_section/_sidebar.html.erb
+++ b/app/views/form_section/_sidebar.html.erb
@@ -1,5 +1,5 @@
 <div class="large-4 medium-4 columns close-side-tab side-tab-container">
-  <div class="side-tab" data-equalizer-watch>
+  <div class="side-tab static_links" data-equalizer-watch>
     <div class="side-nav-container">
       <ul class="side-nav">
         <li class=<%= (highlight_page == 'forms' ? 'current' : '') %>>
