--- a/app/views/exports/_custom_exports.html.erb
+++ b/app/views/exports/_custom_exports.html.erb
@@ -60,7 +60,14 @@
             </fieldset>
           <% end %>
           <div id="password-prompt">
-            <%= render '/exports/export_password'%>
+            <div class="flash hide">
+              <p class="error"></p>
+            </div>
+            <label for="password-field"><%= t('encrypt.password_label') %></label>
+            <input type="password" id="password-field">
+            <small><%= t('encrypt.password_extra_info') %></small>
+            <label for="export-filename"><%= t('encrypt.file_name') %></label>
+            <input type="text" id="export-filename">
           </div>
         </div>
         <div class="clear"></div>
