--- a/app/views/exports/_password_prompt.html.erb
+++ b/app/views/exports/_password_prompt.html.erb
@@ -1,4 +1,10 @@
-
 <div id="password-prompt-dialog" title="<%= t("encrypt.password_title") %>">
-  <%= render '/exports/export_password'%>
+  <div class='flash hide'>
+    <p class='error'></p>
+  </div>
+  <label for="password-prompt-field"><%= t("encrypt.password_label") %></label>
+  <input type="password" id="password-prompt-field" />
+  <small><%= t("encrypt.password_extra_info") %></small>
+  <label id="export-file-name-label" for="export-file-name-field"><%= t("encrypt.file_name") %></label>
+  <input type="text" id="export-file-name-field" />
 </div>
