fixed position of case id header on pdf

--- a/app/views/exports/_custom_exports.html.erb
+++ b/app/views/exports/_custom_exports.html.erb
@@ -13,7 +13,7 @@
     <form id=<%="#{export_type}_export_form"%>>
       <div class="row">
         <div class="large-12 columns modal-content">
-          <fieldset>
+          <fieldset class="module_select">
             <%= render "exports/#{export_type}_exports_format"%>
             <div class="row">
               <div class="medium-12 columns">
