--- a/app/assets/stylesheets/primero/page.scss
+++ b/app/assets/stylesheets/primero/page.scss
@@ -272,6 +272,14 @@ table.dataTable.dtr-inline.collapsed tbody tr.parent th:first-child:before {
   }
 }
 
+.reveal-modal {
+  z-index: 99999;
+}
+
+.reveal-modal-bg {
+  z-index: 9999;
+}
+
 ////////////////////////////////////////////////
 // Panel
 ////////////////////////////////////////////////
