fixed issue where adding a separator to a form blows up

--- a/app/views/form_section/_edit_fields.html.erb
+++ b/app/views/form_section/_edit_fields.html.erb
@@ -125,7 +125,7 @@
             <li><%= link_to t("fields.tally_field"),'', :id => "tally_field", :class => "field_links" %></li>
             <li><%= link_to t("fields.date_field"),'', :id => "date_field", :class => "field_links" %></li>
             <li><%= link_to t("fields.date_range_field"),'', :id => "date_range", :class => "field_links" %></li>
-            <li><%= link_to t("fields.separator"), :id => "separator", :class => "field_links" %></li>
+            <li><%= link_to t("fields.separator"), '', :id => "separator", :class => "field_links" %></li>
             <% unless @form_section.is_nested %>
               <li><%= link_to t("fields.subform"),'', :id => "subform", :class => "field_links" %></li>
             <% end %>
