--- a/app/views/primero_locale/edit.html.erb
+++ b/app/views/primero_locale/edit.html.erb
@@ -3,12 +3,12 @@
 <% end %>
 
 <% content_for :record_sub_nav do %>
-  <%# render_controls(@contact_information) %>
+  <%= render_controls(nil, 'primero_locale') %>
 <% end %>
 
 <div class="page-content-new row collapse" data-equalizer>
   <div class="medium-4 large-4 columns close-side-tab side-tab-container">
-    <%= render :partial => 'shared/side_tab', :locals => {:highlight_page => 'contact_information'} %>
+    <%= render :partial => 'shared/side_tab', :locals => {:highlight_page => 'primero_locale'} %>
   </div>
   <div class="medium-8 large-8 columns side-tab-content-container">
     <div class="side-tab-content" data-equalizer-watch>
@@ -16,16 +16,18 @@
         <div class="large-12 columns">
           <%# TODO - edit locale form goes here!!!%>
           <%# form_for @contact_information, :url => contact_information_path(@contact_information.id), :html => {:class=> 'default-form', :autocomplete => "off"} do |f| %>
-          <%= form_tag primero_locale_update_path, :method => "put", :autocomplete => "off" do %>
+          <%= form_tag primero_locale_update_path, :method => "put", :class => 'default-form', :autocomplete => "off" do %>
+            <fieldset class="no-border">
             <div class="row">
-                <div class="medium-3 columns">
-            <%= label_tag "user_locale", t("home.language") %>
-                </div>
-                <div class="medium-8 columns">
-            <%= select_tag :locale, options_for_select(RapidFTR::Application::LOCALES_WITH_DESCRIPTION, I18n.default_locale) %>
-                </div>
-                <div class="medium-1 columns"> </div>
-            <%= submit_tag t("buttons.save") %>
+              <div class="medium-3 columns">
+                <%= label_tag "user_locale", t("home.language") %>
+              </div>
+              <div class="medium-8 columns">
+                <%= select_tag :locale, options_for_select(RapidFTR::Application::LOCALES_WITH_DESCRIPTION, I18n.default_locale) %>
+              </div>
+              <div class="medium-1 columns"> </div>
+            </div>
+          </fieldset>
           <% end %>
         </div>
       </div>
