--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
     window._primero = {
       model_object: "<%= controller.controller_name.singularize %>",
       current_action: "<%= controller.action_name %>",
-      discard_message: "<%= t('messages.record_navigation_confirmation_message') %>"
+      discard_message: "<%= t('messages.record_navigation_confirmation_message', default: 'Discard unsaved changes?') %>"
     };
   </script>
   <%= yield :pagination_details %>
