Changed locale labels to system settings lables.

--- a/app/views/system_settings/show.html.erb
+++ b/app/views/system_settings/show.html.erb
@@ -1,5 +1,5 @@
 <% content_for :breadcrumbs do %>
-  <%= I18n.t("primero_locale.label") %>
+  <%= I18n.t("system_settings.label") %>
 <% end %>
 
 <div class="row">
@@ -9,7 +9,7 @@
         <p>
           <strong>
             <%= "#{t("home.language")}: " %>
-          </strong> 
+          </strong>
           <%= "#{@primero_language}"%>
         </p>
        </div>
