--- a/app/views/system_settings/edit.html.erb
+++ b/app/views/system_settings/edit.html.erb
@@ -1,5 +1,5 @@
 <% content_for :breadcrumbs do %>
-  <%= I18n.t("primero_locale.label") %>
+  <%= I18n.t("system_settings.label") %>
 <% end %>
 
 <% content_for :record_sub_nav do %>
@@ -8,7 +8,7 @@
 
 <div class="page-content-new row collapse" data-equalizer>
   <div class="medium-4 large-4 columns close-side-tab side-tab-container">
-    <%= render :partial => 'shared/side_tab', :locals => {:highlight_page => 'primero_locale'} %>
+    <%= render :partial => 'shared/side_tab', :locals => {:highlight_page => 'system_settings'} %>
   </div>
   <div class="medium-8 large-8 columns side-tab-content-container">
     <div class="side-tab-content" data-equalizer-watch>
