Freezing dashboard headers on scroll

--- a/app/assets/stylesheets/primero/dashboard.scss
+++ b/app/assets/stylesheets/primero/dashboard.scss
@@ -83,6 +83,10 @@
           &:last-of-type {
             border-right: none;
           }
+
+          &.id_column{
+            min-width: 105px;
+          }
         }
       }
 
