section and location fixed

--- a/app/views/form_section/_list_view_table.html.erb
+++ b/app/views/form_section/_list_view_table.html.erb
@@ -1,10 +1,10 @@
 <table id="form_sections" class="list_table_2 dataTable in_content_area" width="100%">
   <thead>
     <tr>
-      <th><%= t "form_sectoin.name" %></th>
-      <th><%= t "form_sectoin.group" %></th>
-      <th><%= t "form_sectoin.description" %></th>
-      <th ><%= t "form_sectoin.actions" %></th>
+      <th><%= t "form_section.name" %></th>
+      <th><%= t "form_section.group" %></th>
+      <th><%= t "form_section.description" %></th>
+      <th ><%= t "form_section.actions" %></th>
     </tr>
   </thead>
 <input type='hidden' id="save_order_url" value="<%= save_order_form_sections_path %>">
