--- a/app/views/locations/_list_view_table.html.erb
+++ b/app/views/locations/_list_view_table.html.erb
@@ -2,8 +2,8 @@
   <thead>
   <tr>
     <th><%= t "location.name" %></th>
-    <th><%= t "locatoin.type" %></th>
-    <th><%= t "locatoin.hierarchy" %></th>
+    <th><%= t "location.type" %></th>
+    <th><%= t "location.hierarchy" %></th>
     <th ></th>
   </tr>
   </thead>
