user group description

--- a/app/views/user_groups/index.html.erb
+++ b/app/views/user_groups/index.html.erb
@@ -20,7 +20,7 @@
       <%= render partial: 'shared_configuration_resource/table',
                  locals: {objects: @user_groups,
                           object_class: UserGroup,
-                          heading_keys: ['user_group.name', 'user_group.description'],
+                          heading_keys: ['user_group.name', 'description'],
                           properties: ['name', 'description']} %>
     </div>
   </div>
