primero_program description

--- a/app/views/primero_programs/index.html.erb
+++ b/app/views/primero_programs/index.html.erb
@@ -20,7 +20,7 @@
       <%= render partial: 'shared_configuration_resource/table',
                  locals: {objects: @primero_programs,
                           object_class: PrimeroProgram,
-                          heading_keys: ['primero_program.name', 'primero_program.description'],
+                          heading_keys: ['primero_program.name', 'description'],
                           properties: ['name', 'description']} %>
     </div>
   </div>
