primero_module description

--- a/app/views/primero_modules/index.html.erb
+++ b/app/views/primero_modules/index.html.erb
@@ -20,7 +20,7 @@
       <%= render partial: 'shared_configuration_resource/table',
                  locals: {objects: @primero_modules,
                           object_class: PrimeroModule,
-                          heading_keys: ['primero_module.name', 'primero_module.description'],
+                          heading_keys: ['primero_module.name', 'description'],
                           properties: ['name', 'description']} %>
     </div>
   </div>
