PRIMERO-1192 edit button not aligned.
Make sure buttons in the edit bar get the same height.

--- a/app/assets/stylesheets/primero/record_controls.scss
+++ b/app/assets/stylesheets/primero/record_controls.scss
@@ -35,6 +35,7 @@
       border-left: none !important;
       background: $desat_green_color !important;
       color: $green_color !important;
+      height: 37px !important;
     }
 
     li.rec_ctl a.green-button {
