--- a/app/assets/stylesheets/primero/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/primero/foundation_and_overrides.scss
@@ -37,18 +37,12 @@ $twentyfive_px: 1.563rem;
 $sixtythree_px: 3.938rem;
 
 .fa-stack {
-  height: 1em;
-  width: 1em;
-  position: absolute;
-  margin: -0.2em 0 0 0.4em;
+  height: 1.6em;
+  line-height: 1.6em;
+  width: 1.6em;
 
   .fa-stack-2x {
     font-size: 1.6em;
-    margin-top: 0.05em
-  }
-
-  .fa-stack-1x {
-    left: 0.2em;
   }
 }
 
