--- a/app/views/exports/_button.html.erb
+++ b/app/views/exports/_button.html.erb
@@ -1,6 +1,6 @@
 <% if can?(:export, controller.model_class) %>
   <li>
-    <%= link_to t("buttons.export"), '#', class: 'has_sub' %>
+    <%= link_to t("buttons.export"), '#', class: 'has_sub', onclick: 'return false;' %>
     <ul style="display:none;">
       <% Exporters::active_exporters_for_model(controller.model_class).each do |exporter| %>
         <%# Find out if the exporter should be visible on the current page %>
