--- a/app/assets/stylesheets/primero/dashboard.scss
+++ b/app/assets/stylesheets/primero/dashboard.scss
@@ -60,6 +60,7 @@
       border: none;
       width: 100%;
       margin-bottom: 0;
+      table-layout : fixed;
 
       a.id_link{
         float: left;
