--- a/app/assets/stylesheets/primero/dashboard.scss
+++ b/app/assets/stylesheets/primero/dashboard.scss
@@ -1,3 +1,8 @@
+$dashboard_table_col1:166px;
+$dashboard_table_col2:220px;
+$dashboard_table_col3:170px;
+$dashboard_table_col4:170px;
+
 #dashboard {
 
   .panel {
@@ -49,6 +54,8 @@
   }
 
   #content {
+    width:748px;
+
     .panel {
 
       .panel_header h4 {
@@ -57,10 +64,9 @@
     }
 
     table {
+      width:746px;
       border: none;
-      width: 100%;
       margin-bottom: 0;
-      table-layout : fixed;
 
       a.id_link{
         float: left;
@@ -72,6 +78,22 @@
 
       thead {
         background: none;
+
+        th:nth-child(1) {
+          width:$dashboard_table_col1;
+        }
+
+        th:nth-child(2) {
+          width:$dashboard_table_col2;
+        }
+
+        th:nth-child(3) {
+          width:$dashboard_table_col3;
+        }
+
+        th:nth-child(4) {
+          width:$dashboard_table_col4;
+        }
 
         th {
           border-bottom: 1px solid $stroke_green_color;
@@ -92,6 +114,22 @@
       }
 
       tbody {
+        td:nth-child(1) {
+          width:$dashboard_table_col1;
+        }
+
+        td:nth-child(2) {
+          width:$dashboard_table_col2;
+        }
+
+        td:nth-child(3) {
+          width:$dashboard_table_col3;
+        }
+
+        td:nth-child(4) {
+          width:$dashboard_table_col4;
+        }
+
         tr td {
           border-bottom: 1px dashed #ccc;
           border-right: 1px solid $stroke_green_color;
