PRIMERO-1199 W - "carrot" display bug.
Hide the carrot on firefox.

--- a/app/assets/stylesheets/primero/forms_fields.scss
+++ b/app/assets/stylesheets/primero/forms_fields.scss
@@ -44,6 +44,7 @@ select:not([class^="ui-datepicker-"]), select:hover:not([class^="ui-datepicker-"
   background-position: center right 10px;
   color: $grey_color;
   font-size: $thirteen_px;
+  -moz-appearance: none;
 
   &.small {
     height: 1.5rem;
