PRIMERO-1173 IE11 Bugs.
Partial fixes - Fix report table headers alignment.

--- a/app/assets/stylesheets/primero/reports.scss
+++ b/app/assets/stylesheets/primero/reports.scss
@@ -6,6 +6,7 @@ td.report_sidebar_value{
 
 .report_table_content table {
   border: none !important;
+  margin-left: 0px;
 
   tbody tr.report_row_aggregate td{
     background: #ebf0e4;
