--- a/app/views/home/_caseload.html.erb
+++ b/app/views/home/_caseload.html.erb
@@ -32,7 +32,7 @@
           <tr>
             <td class="id_column">
               <% if u.present? %>
-                <%= link_to u, cases_path(scope: { owned_by: "list||#{u}" }), class: 'id_link' %>
+                <%= link_to u, cases_path(scope: { owned_by: "list||#{u}", child_status: "list||Open" }), class: 'id_link' %>
               <% else %>
                 <%= t('dashboard.system_user') %>
               <% end %>
