Removed broken JS link in children show page.

--- a/app/views/children/show.html.erb
+++ b/app/views/children/show.html.erb
@@ -44,7 +44,7 @@ $(function() {
 
 <div class="clearfix"></div>
 <% content_for :stylesheet do %>
-    <%= stylesheet_link_tag "jquery.lightbox-0.5" %>
+    <%#= stylesheet_link_tag "jquery.lightbox-0.5" %>
 <% end %>
 
 <div class="page-content-new row collapse" data-equalizer>
