--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,9 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="google" value="notranslate" />
   <title><%= @page_name %></title>
-  <%= favicon_link_tag('favicon-32x32.png?v=3', sizes: "32x32") %>
-  <%= favicon_link_tag('favicon-96x96.png?v=3', sizes: "96x96") %>
-  <%= favicon_link_tag('favicon-16x16.png?v=3', sizes: "16x16") %>
+  <%#= favicon_link_tag('favicon-32x32.png?v=3', sizes: "32x32") %>
+  <%#= favicon_link_tag('favicon-96x96.png?v=3', sizes: "96x96") %>
+  <%= favicon_link_tag('favicon-16x16.png?v=3') %>
   <%= stylesheet_link_tag "application" %>
   <%= yield :stylesheet %>
   <script>
