--- a/app/assets/stylesheets/primero/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/primero/foundation_and_overrides.scss
@@ -10,12 +10,12 @@
 // Fonts
 ////////////////////////////////////////////////
 
-@include font-face("Roboto", font-files(asset-path('Roboto-Regular.ttf'), asset-path('Roboto-Regular-webfont.woff')));
-@include font-face("Roboto-Light", font-files(asset-path('Roboto-Light.ttf'), asset-path('Roboto-Light-webfont.woff')));
-@include font-face("Roboto-Medium", font-files(asset-path('Roboto-Medium.ttf'), asset-path('Roboto-Medium-webfont.woff')));
-@include font-face("Roboto-Slab", font-files(asset-path('RobotoSlab-Regular.ttf'), asset-path('RobotoSlab-Regular-webfont.woff')));
-@include font-face("Roboto-Bold", font-files(asset-path('Roboto-Bold.ttf'), asset-path('Roboto-Bold-webfont.woff')));
-@include font-face("RobotoSlab-Thin", font-files(asset-path('RobotoSlab-Thin.ttf'), asset-path('RobotoSlab-Thin-webfont.woff')));
+// @include font-face("Roboto", font-files(asset-path('Roboto-Regular.ttf'), asset-path('Roboto-Regular-webfont.woff')));
+// @include font-face("Roboto-Light", font-files(asset-path('Roboto-Light.ttf'), asset-path('Roboto-Light-webfont.woff')));
+// @include font-face("Roboto-Medium", font-files(asset-path('Roboto-Medium.ttf'), asset-path('Roboto-Medium-webfont.woff')));
+// @include font-face("Roboto-Slab", font-files(asset-path('RobotoSlab-Regular.ttf'), asset-path('RobotoSlab-Regular-webfont.woff')));
+// @include font-face("Roboto-Bold", font-files(asset-path('Roboto-Bold.ttf'), asset-path('Roboto-Bold-webfont.woff')));
+// @include font-face("RobotoSlab-Thin", font-files(asset-path('RobotoSlab-Thin.ttf'), asset-path('RobotoSlab-Thin-webfont.woff')));
 
 $headline-font-family: 'Roboto', sans-serif;
 $primary-font-family: 'Roboto', sans-serif;
