Split agency name or code into 2 fields: name, agency_code. Fixed related rspec tests

--- a/app/views/agencies/_editable.html.erb
+++ b/app/views/agencies/_editable.html.erb
@@ -1,4 +1,5 @@
-<%= resource_edit_field(object, 'name', 'agencies.name', 'text_field', true) %>
+<%= resource_edit_field(object, 'name', 'agency.name', 'text_field', true) %>
+<%= resource_edit_field(object, 'agency_code', 'agency.code', 'text_field', true) %>
 <%= resource_edit_field(object, 'description', 'description', 'text_field') %>
 <%= resource_edit_field(object, 'logo', 'agencies.logo', 'file_field') %>
 <%= resource_edit_field(object, 'logo_enabled', 'agencies.logo_enabled', 'check_box') %>
