--- a/app/views/users/_editable_user.html.erb
+++ b/app/views/users/_editable_user.html.erb
@@ -95,7 +95,7 @@
     <div class="row">
       <div class="medium-3 columns">
         <span class="tool-tip-label">
-          <label class="key" for="user_organization" ><%= t("user.organization") %></label>
+          <label class="key" for="user_organization" ><%= t("user.agency") %></label>
         </span>
       </div>
       <div class="medium-8 columns">
