--- a/app/views/record_shared/_actions.html.erb
+++ b/app/views/record_shared/_actions.html.erb
@@ -18,6 +18,10 @@
         <%= render 'transitions/button', type: Transition::TYPE_REFERRAL %>
         <%= render 'transitions/button', type: Transition::TYPE_TRANSFER %>
       <% end %>
+      <% if can?(:sync_mobile, controller.model_class) && controller.model_class.is_syncable_with_mobile? %>
+        <%= render 'record_shared/mark_for_mobile'  %>
+        <%= render 'record_shared/unmark_for_mobile'  %>
+      <% end %>
     </ul>
   </li>
 </ul>
