Added ajax call for Mark for Mobile. WIP

--- a/app/views/record_shared/_mark_for_mobile_button.html.erb
+++ b/app/views/record_shared/_mark_for_mobile_button.html.erb
@@ -1,3 +1,10 @@
+<%
+  model_class_name = controller.model_class.name.underscore.downcase
+  model_name = I18n.t("forms.record_types.#{model_class_name}")
+  mark_mobile_url = "/#{model_name.downcase.underscore.pluralize}/mark_for_mobile"
+  button_label = ((mobile_value == true) ? t("buttons.mark_for_mobile") : t("buttons.unmark_for_mobile"))
+%>
 <li>
-  <%= link_to t("buttons.mark_for_mobile"), '#', class: 'TODO', onclick: 'return false;' %>
+  <%= link_to button_label, '#', class: 'mark_for_mobile', :'data-mark_mobile_url' => mark_mobile_url,
+                :'data-mobile_value' => mobile_value %>
 </li>
