--- a/app/views/children/_show_child_toolbar.html.erb
+++ b/app/views/children/_show_child_toolbar.html.erb
@@ -28,6 +28,10 @@
         <% if can? :edit, @child %>
             <%= render partial: 'record_shared/enable_disable_record', locals: {model: Child, instance: @child} %>
         <% end %>
+        <% if can?(:sync_mobile, controller.model_class) && controller.model_class.is_syncable_with_mobile? %>
+          <%= render 'record_shared/mark_for_mobile_button', instance: @child, mobile_value: true  %>
+          <%= render 'record_shared/mark_for_mobile_button', instance: @child, mobile_value: false  %>
+        <% end %>
     </ul>
   </li>
 </ul>
