--- a/app/views/tracing_requests/_summary_row.html.erb
+++ b/app/views/tracing_requests/_summary_row.html.erb
@@ -1,5 +1,5 @@
 <tr>
-  <td class="select_record"><input type="checkbox" class="select_record" value="<%= record.id %>" id="<%= text_to_identify_child record %>"></td>
+  <td class="select_record"><input type="checkbox" class="select_record" value="<%= record.id %>" id="<%= text_to_identify_tracing_request record %>"></td>
   <td>
     <% if record.flagged? && record.flag_count > 0 %>
       <div class="flag_icon">
