rolled back case id display change to dashboard

--- a/app/views/home/_scheduled_activities.html.erb
+++ b/app/views/home/_scheduled_activities.html.erb
@@ -26,7 +26,7 @@
       <tbody>
         <% scheduled_activities.each do |s| %>
           <tr>
-            <td class="id_column"><%= link_to text_to_identify_child(s), case_path(s[:record_id]), class: 'id_link' %></td>
+            <td class="id_column"><%= link_to s[:short_id], case_path(s[:record_id]), class: 'id_link' %></td>
             <td><%= s[:flagged_by] || t('dashboard.system_user') %></td>
             <td><%= s[:message] %></td>
             <td>
