--- a/app/views/home/_recent_activities.html.erb
+++ b/app/views/home/_recent_activities.html.erb
@@ -26,7 +26,7 @@
         <tbody>
           <% recent_activities.each do |s| %>
             <tr>
-              <td class="id_column"><%= link_to text_to_identify_child(s), case_path(s[:_id]), class: 'id_link' %></td>
+              <td class="id_column"><%= link_to s[:short_id], case_path(s[:_id]), class: 'id_link' %></td>
               <td><%= s[:module_id] == PrimeroModule::GBV ? s[:survivor_code_no] : s[:name] %></td>
               <td><%= s[:owned_by] %></td>
               <td><%= field_format_date(s[:last_updated_at]) %></td>
