--- a/app/views/agencies/index.html.erb
+++ b/app/views/agencies/index.html.erb
@@ -18,7 +18,7 @@
       <%= render partial: 'shared_configuration_resource/table',
                  locals: {objects: @agencies,
                           object_class: Agency,
-                          heading_keys: ['agencies.name', 'description'],
+                          heading_keys: ['agency.name', 'description'],
                           properties: ['name', 'description']} %>
     </div>
   </div>
