Changed namespace RapidFTR to Primero

--- a/app/views/form_section/_add_translations.html.erb
+++ b/app/views/form_section/_add_translations.html.erb
@@ -9,12 +9,12 @@
         </div>
         <div class="medium-9 columns">
           <div class="lang_title">
-            <%= select_tag("locale", options_for_select(RapidFTR::Application::LOCALES_WITH_DESCRIPTION.select { |option| option[1] != I18n.default_locale.to_s }), :class => 'locale') %>
+            <%= select_tag("locale", options_for_select(Primero::Application::LOCALES_WITH_DESCRIPTION.select { |option| option[1] != I18n.default_locale.to_s }), :class => 'locale') %>
           </div>
         </div>
       </div>
   <% end %>
-  <% RapidFTR::Application::LOCALES.each do |given_locale| %>
+  <% Primero::Application::LOCALES.each do |given_locale| %>
       <% if I18n.default_locale.to_s != given_locale %>
         <div class="<%= "translation_forms #{given_locale}"%> hide">
           <%= render :partial => 'form_section/fields', :locals => {:fields => fields, :fld => fld, :given_locale => given_locale, :is_translation => true, :is_field_edit => is_field_edit}%>
