--- a/app/assets/stylesheets/primero/navbar.scss
+++ b/app/assets/stylesheets/primero/navbar.scss
@@ -72,6 +72,18 @@
   }
 }
 
+@media only screen and (min-width: 40.063em) and (max-width: 64em) {
+  .top-bar-section .has-form {
+    input#query {
+      width: 11em;
+    }
+
+    button {
+      width: 1.2em;
+    }
+  }
+}
+
 nav {
   ul {
     font-size:  $fifteen_px;
